deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: offender-risk-profiler
  labels:
    app: offender-risk-profiler
spec:
  replicas: 1
  revisionHistoryLimit: 2
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2
  selector:
    matchLabels:
      app: offender-risk-profiler
  template:
    metadata:
      labels:
        app: offender-risk-profiler
    spec:
      containers:
        - name: offender-risk-profiler
          image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/digcat/offender-risk-profiler:latest
          imagePullPolicy: Always
          # command: ['sh', '-c', "bundle exec puma -p 8080 -C ./config/puma_prod.rb --pidfile /tmp/server.pid"]
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "700Mi"
            requests:
              memory: "500Mi"
