deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: offender-risk-profiler-svc
  namespace: categoriation-tool-dev
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
  selector:
    app: offender-risk-profiler
